--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url("./shara desert.jpg");
+    background-image: url("./desert.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
